# teaching_cmake

./: .gitignore  README.md  build_all.sh  presentation.md  slides.md
01_hello_world/: CMakeLists.txt  README.md  main.f90
02_library_and_exe/: CMakeLists.txt
02_library_and_exe/app/: main.f90
03_compiler_flags/: CMakeLists.txt  README.md  main.f90
04_build_types/: CMakeLists.txt  README.md  main.f90
05_options/: CMakeLists.txt  README.md  main.F90
06_find_package/: CMakeLists.txt  main.f90
07_fetchcontent/: CMakeLists.txt  README.md  main.f90
08_installing/: CMakeLists.txt
08_installing/app/: main.f90
08_installing/src/: math_funcs.f90
09_making_findable/: CMakeLists.txt  README.md
09_making_findable/cmake/: mathlibConfig.cmake.in
09_making_findable/src/: math_funcs.f90
10_testing/: CMakeLists.txt  README.md
10_testing/src/: math_funcs.f90
10_testing/test/: test_basic.f90  test_math_funcs.f90
11_custom_commands/: CMakeLists.txt  README.md
11_custom_commands/src/: mylib.src
11_custom_commands/tools/: process.sh
12_per_file_flags/: README.md
12_per_file_flags/src/: main.f90  stable_code.f90
13_subdirectories/: README.md
13_subdirectories/app/: CMakeLists.txt  main.f90
13_subdirectories/src/: CMakeLists.txt
13_subdirectories/src/core/: CMakeLists.txt  core_module.f90
13_subdirectories/src/utils/: utils_module.f90
13_subdirectories/test/: CMakeLists.txt
14_presets/: CMakeLists.txt
14_presets/app/: main.f90
14_presets/test/: test_mylib.f90
15_test_drive/: CMakeLists.txt
15_test_drive/src/: matrix_ops.f90  statistics.f90  vector_ops.f90
15_test_drive/test/: main.f90  test_matrix_ops.f90  test_statistics.f90
16_c_fortran_interop/: README.md
16_c_fortran_interop/src/c/: math_utils.c  math_utils.h
16_c_fortran_interop/src/fortran/: main.f90
17_gpu_offloading/: CMakeLists.txt
18_cuda_hip_runtime/: main.F90
examples/: CMakePresets.json
examples/c_project/: compile.sh
examples/c_project/include/heatmap/: heatmap.h
examples/c_project/src/: heatmap.c  main.c
examples/fortran_project/: Makefile
examples/fortran_project/src/: main.f90  wave_solver.f90
old_fortran_cmake/: build_all.sh
old_fortran_cmake/02_library_and_exe/: README.md
old_fortran_cmake/02_library_and_exe/src/: math_operations.f90
old_fortran_cmake/03_compiler_flags/: CMakeLists.txt
old_fortran_cmake/06_find_package/: README.md
old_fortran_cmake/08_installing/: README.md
old_fortran_cmake/10_testing/: CMakeLists.txt
old_fortran_cmake/10_testing/test/: main.f90
old_fortran_cmake/11_custom_commands/app/: main.f90
old_fortran_cmake/12_per_file_flags/: CMakeLists.txt
old_fortran_cmake/12_per_file_flags/src/: another_problem.f90  problematic_code.f90
old_fortran_cmake/13_subdirectories/: CMakeLists.txt
old_fortran_cmake/13_subdirectories/cmake/: CMakeLists.txt
old_fortran_cmake/13_subdirectories/src/utils/: CMakeLists.txt
old_fortran_cmake/13_subdirectories/test/: test_core.f90
old_fortran_cmake/14_presets/: CMakePresets.json  CMakeUserPresets.json.example  README.md
old_fortran_cmake/14_presets/src/: mylib.f90
old_fortran_cmake/15_test_drive/: README.md
old_fortran_cmake/15_test_drive/test/: test_vector_ops.f90
old_fortran_cmake/15_test_drive/test/integration/: main.f90  test_full_workflow.f90
old_fortran_cmake/16_c_fortran_interop/: CMakeLists.txt
old_fortran_cmake/16_c_fortran_interop/src/fortran/: c_math_interface.f90
old_fortran_cmake/17_gpu_offloading/: main.F90
old_fortran_cmake/18_cuda_hip_runtime/: CMakeLists.txt
skills/: add_cmake_build_system.md  fix_my_cmake.md  roast_my_cmake.md
